<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".ui.Configuracion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/edtcorreo"/>
        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:paddingHorizontal="15dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:background="@color/Blanco"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/edtnombre"/>
        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingHorizontal="15dp"
            android:inputType="textPersonName"
            android:background="@color/Blanco"/>
    </LinearLayout>

    <Switch
        android:id="@+id/swtAltocontraste"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/edtaltocontraste"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtFuente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/edttamfuente"/>
        <Button
            android:id="@+id/btnFuente1"
            android:textSize="14sp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Aa"
            android:layout_margin="10dp"
            android:radius="20dp"
            android:layout_weight="10"
            android:background="@color/color1"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnFuente2"
            android:textSize="18sp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Aa"
            android:layout_margin="10dp"
            android:radius="20dp"
            android:layout_weight="10"
            android:background="@color/color1"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnFuente3"
            android:textSize="20sp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="Aa"
            android:layout_margin="10dp"
            android:radius="20dp"
            android:layout_weight="10"
            android:background="@color/color1"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnguardar"
        android:background="@color/color3"
        android:textSize="@dimen/TitleSize"/>
</LinearLayout>