<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">
    <ImageView
        android:id="@+id/imgfondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:background="@drawable/side_nav_bar2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:civ_border_width="2dp"
                app:civ_border_overlay="false"/>
            <TextView
                android:id="@+id/txtLogoTextoSplahs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/Blanco"
                android:textStyle="bold"
                android:textSize="35sp"
                android:typeface="sans"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="8"
            >
            <TextView
                android:id="@+id/txtBienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtbienvenida"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            >
            <Button
                android:id="@+id/btn_omitir"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/btnomitir"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/Blanco"
                android:background="#00FFFFFF"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>